After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 668115 - about dialog tag line isn't awesome
about dialog tag line isn't awesome
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-01-17 18:02 UTC by William Jon McCann
Modified: 2012-07-31 15:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
window-commands: update About dialog tagline (968 bytes, patch)
2012-01-19 23:57 UTC, Diego Escalante Urrelo (not reading bugmail)
committed Details | Review

Description William Jon McCann 2012-01-17 18:02:18 UTC
"Lets you view web pages and find information on the internet."

isn't really awesome.

Maybe "Just the web." or something like that.
Comment 1 William Jon McCann 2012-01-17 19:22:12 UTC
On the Web design wiki I used:
"A simple, clean, beautiful view of the web."
Comment 2 Diego Escalante Urrelo (not reading bugmail) 2012-01-19 23:57:57 UTC
Created attachment 205665 [details] [review]
window-commands: update About dialog tagline
Comment 3 Diego Escalante Urrelo (not reading bugmail) 2012-01-19 23:59:18 UTC
beautiful might not be my preferred word since we can't really make the web more beautiful.

"A simple, clean and easy view of the web"?
Something along "made of easy" or something like that.

Anyway, made the patch so we don't forget about this one. I do agree that the tagline right now is quiet boring.
Comment 4 Diego Escalante Urrelo (not reading bugmail) 2012-07-31 15:19:58 UTC
Attachment 205665 [details] pushed as 7efd2ff - window-commands: update About dialog tagline