window-commands: update About dialog tagline

https://bugzilla.gnome.org/show_bug.cgi?id=668115